--- a/css/common.css
+++ b/css/common.css
@@ -1,3 +1,22 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
+body {
+  background-color: #ffffff;
+  color: var(--main-text-color);
+  font-family: Roboto, sans-serif;
+  letter-spacing: 0.03em;
+  line-height: 1.14;
+  margin: 0;
+}
+
 .list {
   list-style: none;
 }
@@ -18,3 +37,49 @@ address {
 /* * {
   outline: 1px solid tomato;
 } */
+
+.space {
+  height: 200px;
+  /* outline: 0.1px solid tomato; */
+}
+
+.btn {
+  /* positioning */
+  margin-left: 100px;
+  padding: 5px 10px;
+
+  /* Box model */
+  display: inline-block;
+
+  height: 50px;
+  width: 120px;
+
+  /* Typography */
+  color: rgb(112, 208, 224);
+
+  /* Visual */
+  background-color: rgb(84, 148, 209);
+  border: 2px solid black;
+  border-radius: 3px;
+}
+
+.btn:hover,
+btn:focus {
+  color: black;
+  background-color: rgb(240, 136, 136);
+  border-color: brown;
+}
+
+.in-box-el {
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  vertical-align: middle;
+  background-color: #fff;
+}
+
+.container {
+  width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
