--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,10 @@
   --inactive-black: #212121;
 }
 
-body {
-  background-color: #ffffff;
-  color: var(--main-text-color);
-  font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
-  line-height: 1.14;
-}
+/* 
+w: 1170 + 30 = 1200px
+gutter: 30px; → left-gut: 15 and right-gut: 15px;
+*/
 
 /* Logo */
 .logo {
