--- a/css/common.css
+++ b/css/common.css
@@ -18,6 +18,8 @@ body {
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
@@ -43,6 +45,7 @@ address {
   /* outline: 0.1px solid tomato; */
 }
 
+/*   <a href="" class="btn"><span class="in-box-el"></span> x </a>  */
 .btn {
   /* positioning */
   margin-left: 100px;
@@ -52,7 +55,7 @@ address {
   display: inline-block;
 
   height: 50px;
-  width: 120px;
+  min-width: 120px;
 
   /* Typography */
   color: rgb(112, 208, 224);
@@ -76,10 +79,4 @@ btn:focus {
   height: 20px;
   vertical-align: middle;
   background-color: #fff;
-}
-
-.container {
-  width: 800px;
-  margin-left: auto;
-  margin-right: auto;
 }
