--- a/css/styles.css
+++ b/css/styles.css
@@ -12,10 +12,14 @@
   padding-left: 15px;
   padding-right: 15px;
   width: 1170px;
-  outline: 1px solid tomato;
 }
 
 /* Logo */
+
+/* .page-header {
+  padding-left: 215px;
+} */
+
 .logo {
   font-family: "Raleway", sans-serif;
   font-weight: 700;
@@ -33,6 +37,21 @@
 }
 
 /* Navigation */
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.nav {
+  display: flex;
+  align-items: center;
+}
+
 .site-nav .link {
   color: var(--inactive-black);
   font-size: 14px;
@@ -40,9 +59,31 @@
   letter-spacing: 0.02em;
 }
 
+.site-nav .item + .item {
+  margin-left: 50px;
+}
+
+/* .site-nav .item:not(:last-child) {
+  margin-right: 50px;
+} */
+.header-contacts {
+  margin-left: auto;
+}
+
+.header-contacts .item + .item {
+  margin-left: 50px;
+}
+/* .header-contacts .item:not(:last-child) {
+  margin-right: 50px;
+} */
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--focus-color);
+}
+
+.header-contacts {
+  display: flex;
 }
 
 .header-contacts .link {
