--- a/css/styles.css
+++ b/css/styles.css
@@ -251,17 +251,21 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
 }
 
 .portfolio .item {
-  margin-right: 20px;
+  margin-right: 30px;
+  margin-bottom: 30px;
   width: 370px;
   outline: 1px solid teal;
 }
 
 .portfolio .item:nth-child(3n) {
   margin-right: 0;
+}
+
+.portfolio .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 /* Portfolio list*/
