--- a/test2styles/test2styles.css
+++ b/test2styles/test2styles.css
@@ -8,9 +8,8 @@ html {
   box-sizing: inherit;
 }
 
-li {
+li.item {
   list-style: none;
-  background-color: aqua;
 }
 
 .container {
@@ -18,7 +17,8 @@ li {
   padding-bottom: 15px;
   padding-left: 15px;
   padding-right: 15px;
-  width: 1200px;
+  width: 600px;
+  height: 800px;
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid grey;
@@ -26,7 +26,6 @@ li {
 
 .item {
   width: calc((100% - 45px) / 4);
-  outline: 1px solid tomato;
 }
 
 .list {
@@ -34,6 +33,66 @@ li {
   flex-wrap: wrap;
 }
 
-.item:not(:nth-child(4n)) {
-  margin-right: 15px;
+.header-list {
+  display: flex;
+  align-items: center;
 }
+
+.header-list-item {
+  display: flex;
+  min-width: 50px;
+  height: 50px;
+  padding: 5px 15px;
+  font-size: 26px;
+  background-color: antiquewhite;
+  align-items: center;
+  border: 1px solid grey;
+  border-radius: 3px;
+}
+
+.header-list-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.header-list-item:hover,
+.header-list-item:focus {
+  background-color: cyan;
+}
+
+.header-list-item .link {
+  text-decoration: none;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.testing-text {
+  text-align: center;
+}
+
+.testing-list {
+  display: flex;
+  flex-wrap: wrap;
+  padding-left: 0;
+  height: 80px;
+  align-items: center;
+  background-color: aqua;
+}
+
+.testing-list .item {
+  width: calc((100%-16px) / 7);
+
+  font-size: 20px;
+  text-align: center;
+
+  background-color: mistyrose;
+  border: 1px solid grey;
+  border-radius: 450px;
+}
+
+/* .testing-list .item:not(:nth-child(3n)) {
+  margin-right: 15px;
+} */
+
+/* 
+600 - 15 - 15 = 570
+*/
