--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,9 @@
 }
 
 /* Header */
-
+.page-header {
+  border-bottom: 1px solid #ececec;
+}
 /* Logo */
 
 .logo {
@@ -221,6 +223,7 @@
 
 .our-team-section-title {
   margin-top: 0;
+  margin-bottom: 10px;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.19;
@@ -236,20 +239,39 @@
   line-height: 0;
   outline: 1px solid tomato;
 }
+
+.our-team-list .image {
+  margin-bottom: 30px;
+}
+
 .our-team-item-text {
+  margin-top: 0;
+  margin-bottom: 30px;
   font-size: 16px;
   line-height: 1.19;
 }
 
 /* Footer */
 .footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
   background-color: #2f303a;
 }
 
+.address {
+  margin-top: 20px;
+}
+
 .location {
+  margin: 0;
   font-size: 14px;
   line-height: 1.71;
   color: var(--focus-text-color);
+}
+
+.footer-contacts {
+  margin-top: 9px;
+  line-height: 0;
 }
 
 .footer-contacts .link {
