--- a/css/styles.css
+++ b/css/styles.css
@@ -289,7 +289,8 @@
   margin-right: 30px;
   margin-bottom: 30px;
   width: 370px;
-  outline: 1px solid teal;
+  /* border: 1px solid #eeeeee; */
+  border: 1px solid red;
 }
 
 .portfolio .item:nth-child(3n) {
