--- a/css/styles.css
+++ b/css/styles.css
@@ -274,18 +274,22 @@
 
 .features .antenna::before {
   background-image: url(../images/antenna.svg);
+  background-size: 65px;
 }
 
 .features .clock::before {
   background-image: url(../images/clock.svg);
+  background-size: 67px;
 }
 
 .features .diagram::before {
   background-image: url(../images/diagram.svg);
+  background-size: 70px;
 }
 
 .features .astronaut::before {
   background-image: url(../images/astronaut.svg);
+  background-size: 70px;
 }
 
 /* Our team */
@@ -452,6 +456,11 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
+  outline: 1px solid tomato;
+}
+
+.portfolio li {
+  outline: 1px solid tomato;
 }
 
 .portfolio .item {
