--- a/css/styles.css
+++ b/css/styles.css
@@ -333,7 +333,7 @@
 }
 
 .social-list {
-  display: inline-flex;
+  display: flex;
   margin-bottom: 30px;
 }
 
@@ -342,16 +342,15 @@
 }
 
 .social-list .link::before {
+  display: flex;
   content: "";
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  display: inline-flex;
 
-  background-size: auto;
   background-repeat: no-repeat;
   background-position: center;
-  /* outline: 1px solid palevioletred; */
+  outline: 1px solid palevioletred;
 }
 .social-list .link::before:not(:last-child) {
   margin-right: 10px;
@@ -359,18 +358,22 @@
 
 .social-list .instagram::before {
   background-image: url(../images/social/instagram.svg);
+  background-size: 20px;
 }
 
 .social-list .twitter::before {
   background-image: url(../images/social/twitter.svg);
+  background-size: 20px;
 }
 
 .social-list .facebook::before {
   background-image: url(../images/social/facebook.svg);
+  background-size: 10px;
 }
 
 .social-list .linkedin::before {
   background-image: url(../images/social/linkedin.svg);
+  background-size: 20px;
 }
 
 /* Regular customers */
