--- a/css/styles.css
+++ b/css/styles.css
@@ -237,6 +237,10 @@
   border-radius: 4px;
 }
 
+.features-image {
+  fill: var(--inactive-black);
+}
+
 .features .title {
   margin-bottom: 10px;
   text-transform: uppercase;
