--- a/images/moon-2/style.css
+++ b/images/moon-2/style.css
@@ -15,22 +15,6 @@ Single-colored icons can be modified like so:
 }
 ========================================== */
 
-.icon-Vector-2 {
-  width: 0.75em;
-}
-
-.icon-Vector-3 {
-  width: 0.599609375em;
-}
-
-.icon-Vector-4 {
+.icon-Frame {
   width: 1.2958984375em;
-}
-
-.icon-Vector {
-  width: 0.25em;
-}
-
-.icon-Vector-1 {
-  width: 0.5712890625em;
 }
