--- a/css/styles.css
+++ b/css/styles.css
@@ -197,6 +197,8 @@
   color: var(--focus-text-color);
   background-color: var(--focus-color);
   border: none;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 /* Section */
@@ -396,12 +398,12 @@
 .portfolio {
   display: flex;
   flex-wrap: wrap;
-  outline: 1px solid tomato;
+  /* outline: 1px solid tomato; */
 }
 
-.portfolio li {
+/* .portfolio li {
   outline: 1px solid tomato;
-}
+} */
 
 .portfolio .item {
   margin-right: 30px;
@@ -426,7 +428,7 @@
   color: var(--inactive-black);
 }
 
-.portfolio-item-text {
+.portfolio .text {
   font-size: 16px;
   line-height: 1.88;
 }
@@ -442,14 +444,29 @@
 }
 
 .portfolio .item-border-container {
+  padding-bottom: 20px;
   border-width: 0px 1px 1px 1px;
   border-style: solid;
   border-color: #eeeeee;
 }
 
+.item-border-container .title {
+  margin-bottom: 4px;
+}
+
+.item-border-container .text {
+  margin: 0;
+}
+
 .portfolio .link {
   display: flex;
   flex-direction: column;
+}
+
+.portfolio .link:hover,
+.portfolio .link:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
 .portfolio .paragraph {
