--- a/css/styles.css
+++ b/css/styles.css
@@ -445,6 +445,7 @@
 
 .portfolio .item-border-container {
   padding-bottom: 20px;
+  height: 100%;
   border-width: 0px 1px 1px 1px;
   border-style: solid;
   border-color: #eeeeee;
@@ -460,6 +461,7 @@
 
 .portfolio .link {
   display: flex;
+  height: 100%;
   flex-direction: column;
 }
 
