--- a/css/styles.css
+++ b/css/styles.css
@@ -78,6 +78,25 @@
   color: var(--focus-color);
 }
 
+.current::before {
+  position: absolute;
+  bottom: 0;
+
+  display: inline-block;
+  margin-top: 20px;
+  width: 100%;
+  height: 4px;
+
+  background-color: var(--focus-color);
+  border-radius: 2px;
+  content: "";
+  outline: 1px solid tomato;
+}
+
+.site-nav .item {
+  position: relative;
+}
+
 .header-contacts {
   display: flex;
   margin-left: auto;
@@ -471,9 +490,38 @@
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.portfolio .paragraph {
+.text-overlay {
+  position: relative;
+}
+
+.text-overlay .paragraph {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
   margin-top: 0;
   margin-bottom: 0;
+}
+
+.portfolio .item:hover .paragraph {
+  display: inline-block;
+  width: 322px;
+  height: 168px;
+  overflow: hidden;
+  font-size: 18px;
+  line-height: 1.6;
+  color: var(--focus-text-color);
+  opacity: 1;
+}
+
+.portfolio .item:hover .text-overlay::before {
+  position: absolute;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(33, 150, 243, 0.9);
+  content: "";
 }
 
 /* Social */
