--- a/css/styles.css
+++ b/css/styles.css
@@ -78,23 +78,21 @@
   color: var(--focus-color);
 }
 
-.current::before {
+.current::after {
   position: absolute;
   bottom: 0;
-
-  display: inline-block;
-  margin-top: 20px;
+  margin-bottom: -32px;
+  display: block;
   width: 100%;
   height: 4px;
-
   background-color: var(--focus-color);
   border-radius: 2px;
   content: "";
-  outline: 1px solid tomato;
 }
 
 .site-nav .item {
   position: relative;
+  display: inline-block;
 }
 
 .header-contacts {
