--- a/css/styles.css
+++ b/css/styles.css
@@ -241,7 +241,23 @@
 }
 
 .our-activities .item {
+  position: relative;
   line-height: 0;
+}
+
+.our-activities .title {
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 70px;
+  font-size: 14px;
+  text-transform: uppercase;
+  background-color: rgba(47, 48, 58, 0.8);
+  color: var(--focus-text-color);
 }
 
 /* Features */
