--- a/css/styles.css
+++ b/css/styles.css
@@ -81,10 +81,12 @@
 .current::after {
   position: absolute;
   bottom: 0;
-  margin-bottom: -32px;
+  left: 0;
   display: block;
   width: 100%;
   height: 4px;
+  margin-bottom: -32px;
+
   background-color: var(--focus-color);
   border-radius: 2px;
   content: "";
