--- a/css/styles.css
+++ b/css/styles.css
@@ -44,6 +44,8 @@
 /* Navigation */
 .site-nav {
   display: flex;
+  align-items: center;
+  height: inherit;
   margin-left: 93px;
 }
 
@@ -56,9 +58,14 @@
 .nav {
   display: flex;
   align-items: center;
+  height: inherit;
 }
 
 .site-nav .link {
+  display: flex;
+  align-items: center;
+  height: inherit;
+
   color: var(--inactive-black);
   font-size: 14px;
   font-weight: 500;
@@ -82,10 +89,10 @@
   position: absolute;
   bottom: 0;
   left: 0;
+
   display: block;
   width: 100%;
   height: 4px;
-  margin-bottom: -32px;
 
   background-color: var(--focus-color);
   border-radius: 2px;
@@ -94,7 +101,9 @@
 
 .site-nav .item {
   position: relative;
+
   display: inline-block;
+  height: inherit;
 }
 
 .header-contacts {
